# openjaw

./: .gitignore  LICENSE  README.md  pyproject.toml
Plan/: Claude Master Prompt 150226 - PRD.docx
configs/: default.yaml
openjaw/: __init__.py
openjaw/audio/: sparc_decoder.py
openjaw/core/: mdp.py  types.py
openjaw/data/: custom_speaker.py  preprocessing.py  vocaset.py
openjaw/env/: __init__.py  articulators.py  mouth_env.py  oral_cavity.py
openjaw/env/assets/: mouth.xml
openjaw/evaluation/: ablations.py  metrics.py  visualization.py
openjaw/perception/: lip_reader.py  sylber.py  wav2vec.py
openjaw/policy/: networks.py
openjaw/reward/: audio_reward.py  auxiliary.py  combined.py  visual_reward.py
openjaw/training/: __init__.py  buffer.py  curriculum.py  logger.py  ppo.py  trainer.py
openjaw/visual/: flame_adapter.py  renderer.py
paper/: build.sh  main.tex  references.bib
scripts/: evaluate.py  generate_figures.py  plot_training_run.py  run_ablations.py  run_babbling_vowels.py  run_syllables.py  train.py
tasks/: Dev-Plan.md  Execution-Plan.md  execution-plan.json  prd-a-openjaw-rl-articulatory-imitation.md  prd-b-openjaw-rl-articulatory-imitation.md  prd-c-openjaw-rl-articulatory-imitation.md
tests/: test_ablations.py  test_audio.py  test_buffer.py  test_data.py  test_env.py  test_integration.py  test_mdp.py  test_metrics.py  test_perception.py  test_policy.py  test_ppo.py  test_reward.py  test_scaffold.py  test_training.py  test_visual.py  test_visualization.py
