[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openjaw"
version = "0.1.0"
description = "Mathematical RL framework for closed-loop visual-acoustic articulatory speech imitation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "OpenJaw Team"},
]

dependencies = [
    "torch>=2.0",
    "mujoco>=3.0",
    "gymnasium>=0.29",
    "stable-baselines3>=2.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "tensorboard>=2.14",
    "tqdm>=4.65",
    "librosa>=0.10",
    "soundfile>=0.12",
    "transformers>=4.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.5",
    "ruff>=0.1",
]
wandb = [
    "wandb>=0.15",
]

[tool.setuptools.packages.find]
include = ["openjaw*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
